# treq

./: README.rst  SECURITY.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yaml
changelog.d/: 384.feature.rst
docs/: api.rst
docs/examples/: using_cookies.py
src/treq/: auth.py  client.py  cookies.py  response.py
src/treq/test/: test_cookies.py
